--- a/homework/style-assignment.css
+++ b/homework/style-assignment.css
@@ -4,13 +4,18 @@ header{
 	padding-top: 30px;
 	padding-bottom: 30px;
 }
+section:after{
+	clear: both;
+	content: "";
+	display: block;
+}
 footer{
 	background-color: #808080;
 	color: #ffffff;
 	padding-top: 20px;
 	padding-bottom: 20px;
 }
-ul{
+li{
 	border: 1px ;
 	color: #ffffff;
 	background-color: #33b5e6;
@@ -19,12 +24,19 @@ ul{
 	padding-right: 100px;
 	font-color:#ffffff;
 }
-ol{
+ul{
+	list-style-type: none;
 	padding-bottom: 1px;
 	padding-left: 10px;
 	padding-right: 30px;
 }
 aside{
-	padding-top: 30px;
-	padding-bottom: 30px;
+	float: left;
+	width: 25%;
+	box-sizing: border-box;
+}
+main{
+	float: right;
+	 width:75%; 
+	 box-sizing: border-box;
 }
